force-app/main/default/objects/Devlog__c/DevLog__c.object-meta.xml
<CustomObject>
    <label>DevLog</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>DevLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DevLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>