force-app/main/default/objects/Devlog__c/fields/RalatedId__c.field-meta.xml
<CustomField>
    <fullName>RalatedId__c</fullName>
    <label>RalatedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>