force-app/main/default/objects/Devlog__c/fields/RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecord__c</fullName>
    <label>RelatedRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>