force-app/main/default/objects/Devlog__c/fields/Trace__c.field-meta.xml
<CustomField>
    <fullName>Trace__c</fullName>
    <label>Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>