force-app/main/default/objects/Devlog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RalatedId__c</columns>
    <columns>EndPoint__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method__c</columns>
    <columns>Input__c</columns>
    <columns>Output__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>