force-app/main/default/objects/Devlog__c/listViews/Exception.listView-meta.xml
<ListView>
    <fullName>Exception</fullName>
    <columns>NAME</columns>
    <columns>Trace__c</columns>
    <columns>Method__c</columns>
    <columns>Message__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Exception</value>
    </filters>
    <label>Exception</label>
</ListView>